# preflate-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  azure-pipelines.yml
.cargo/: config.toml
.config/1espt/: PipelineAutobaseliningConfig.yml
.config/guardian/: .gdnbaselines
.github/workflows/: publish.yml  rust.yml
adaptipak/: Cargo.toml
adaptipak/src/: idat_parse.rs
container/: CLAUDE.md  Cargo.toml  README.md
container/src/: container_common.rs  container_processor.rs  container_read.rs  container_write.rs  idat_parse.rs  lib.rs  pdf_parse.rs  scan_deflate.rs  scoped_read.rs  utils.rs  zstd_compression.rs
dll/: CLAUDE.md  Cargo.toml  README.md
dll/src/: lib.rs  unmanaged_api.rs
fuzz/: CLAUDE.md  Cargo.toml  README.md  fuzz_container.rs  fuzz_target_1.rs
gen-sample/: Cargo.toml
gen-sample/src/: main.rs
lib/: Cargo.toml
lib/src/: bit_helper.rs  cabac_codec.rs  container_processor.rs  hash_chain_holder.rs  idat_parse.rs  lib.rs  preflate_error.rs  preflate_input.rs  scan_deflate.rs  scoped_read.rs  stream_processor.rs  token_predictor.rs  tree_predictor.rs  utils.rs  zstd_compression.rs
lib/src/deflate/: bit_reader.rs  deflate_reader.rs  deflate_token.rs  deflate_writer.rs  huffman_encoding.rs  mod.rs
lib/src/estimator/: complevel_estimator.rs  depth_estimator.rs  preflate_parameter_estimator.rs  preflate_parse_config.rs
package/: Preflate.Rust.nuspec  PreflateRs.nuspec
preflate/: CLAUDE.md  Cargo.toml  README.md
preflate-lib/: Cargo.toml
preflate-lib/src/: bit_helper.rs  cabac_codec.rs  hash_chain.rs  huffman_calc.rs  main.rs  preflate_info.rs  process.rs  statistical_codec.rs  tests.rs  token_predictor.rs  tree_predictor.rs  zip_bit_reader.rs
preflate-lib/tests/: end_to_end.rs
preflate/src/: cabac_codec.rs  hash_chain.rs  hash_chain_holder.rs  lib.rs  preflate_error.rs  preflate_input.rs  statistical_codec.rs  stream_processor.rs  token_predictor.rs  tree_predictor.rs  utils.rs
preflate/src/deflate/: bit_reader.rs  bit_writer.rs  deflate_constants.rs  deflate_reader.rs  deflate_token.rs  deflate_writer.rs  huffman_calc.rs  huffman_encoding.rs
preflate/src/estimator/: add_policy_estimator.rs  complevel_estimator.rs  depth_estimator.rs  preflate_parameter_estimator.rs  preflate_stream_info.rs
samples/: compressed2.lep  compressed_flate2_level0.deflate  compressed_flate2_level1.deflate  compressed_flate2_level2.deflate  compressed_flate2_level3.deflate  compressed_flate2_level4.deflate  compressed_flate2_level5.deflate  compressed_flate2_level6.deflate  compressed_flate2_level7.deflate  compressed_flate2_level8.deflate  compressed_flate2_level9.deflate  compressed_libdeflate_level1.deflate  compressed_libdeflate_level2.deflate  compressed_libdeflate_level3.deflate  compressed_libdeflate_level4.deflate  compressed_libdeflate_level5.deflate  compressed_libdeflate_level6.deflate  compressed_libdeflate_level7.deflate  compressed_libdeflate_level8.deflate  compressed_libdeflate_level9.deflate  compressed_minizoxide_level1.deflate  compressed_zlib_level0.deflate  compressed_zlib_level1.deflate  compressed_zlib_level2.deflate  compressed_zlib_level3.deflate  compressed_zlib_level4.deflate  compressed_zlib_level5.deflate  compressed_zlib_level6.deflate  compressed_zlib_level7.deflate  compressed_zlib_level8.deflate  compressed_zlib_level9.deflate  compressed_zlibng_level1.deflate  compressed_zlibng_level2.deflate  compressed_zlibng_level3.deflate  compressed_zlibng_level4.deflate  dump214.deflate  dump5265.deflate  pptxplaintext.deflate  starcontrol.deflate  starcontrol.samplesave  (+4 more)
src/: add_policy_estimator.rs  bit_helper.rs  bit_reader.rs  bit_writer.rs  block_decoder.rs  cabac_codec.rs  chunk_processor.rs  complevel_estimator.rs  container_processor.rs  crc32.rs  deflate_decoder.rs  deflate_encoder.rs  deflate_reader.rs  deflate_stream.rs  deflate_writer.rs  depth_estimator.rs  hash_algorithm.rs  hash_chain.rs  hash_chain_holder.rs  hash_table.rs  huffman_calc.rs  huffman_decoder.rs  huffman_encoding.rs  huffman_helper.rs  huffman_table.rs  idat_parse.rs  lib.rs  main.rs  minz_compress.rs  predictor_state.rs  preflate_block_decoder.rs  preflate_complevel_estimator.rs  preflate_constants.rs  preflate_container.rs  preflate_error.rs  preflate_hash_chain.rs  preflate_info.rs  preflate_input.rs  preflate_parameter_estimator.rs  preflate_parse_config.rs  (+22 more)
src/deflate/: bit_reader.rs  bit_writer.rs  deflate_constants.rs  deflate_reader.rs  deflate_token.rs  deflate_writer.rs  huffman_calc.rs  huffman_encoding.rs  huffman_helper.rs  mod.rs
src/estimator/: add_policy_estimator.rs  complevel_estimator.rs  depth_estimator.rs  mod.rs  preflate_parameter_estimator.rs  preflate_parse_config.rs  preflate_stream_info.rs
src/util/: main.rs
tests/: CLAUDE.md  end_to_end.rs
util/: CLAUDE.md  Cargo.toml  README.md
util/src/: main.rs  search_signature.rs  zip_structs.rs
