# root project only exists to refer to the packages
# and run the end-to-end tests in the tests directory 

[package]
name = "preflate-rs-root"
version = "0.0.0"
edition = "2021"

[profile.release]
debug=true

[workspace]
members = ["lib","dll","util"]
resolver = "2"

[dev-dependencies]
preflate-rs = { path = "lib" }
libz-sys = "1.1"
libdeflate-sys = "1.19"
libz-ng-sys="1.1.12"
miniz_oxide="0.8"
