# root project only exists to refer to the packages
# and run the end-to-end tests in the tests directory 

[package]
name = "preflate-rs-root"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"

[profile.release]
debug = true

[workspace]
members = ["preflate", "container", "dll", "util", "fuzz"]
resolver = "2"

[dev-dependencies]
preflate-rs = { path = "preflate" }
preflate-container = { path = "container" }
libz-sys = "1.1"
libdeflate-sys = "1.19"
libz-ng-sys = "1.1.12"
miniz_oxide = "0.8"
