# root project only exists to refer to the packages
# and run the end-to-end tests in the tests directory

[package]
name = "preflate-rs-root"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[profile.release]
debug = true

[workspace]
members = ["preflate", "container", "dll", "util"]
resolver = "2"

[workspace.package]
version = "0.7.6"
edition = "2024"
authors = ["Kristof Roomp <kristofr@microsoft.com>"]
license = "Apache-2.0"
rust-version = "1.89"
repository = "https://github.com/microsoft/preflate-rs"

[dev-dependencies]
preflate-rs = { path = "preflate" }
preflate-container = { path = "container" }
libz-sys = "1.1"
libdeflate-sys = "1.19"
libz-ng-sys = "1.1.12"
miniz_oxide = "0.9"
