[package]
name = "preflate-container"
version = "0.7.2"
edition = "2024"
authors = ["Kristof Roomp <kristofr@microsoft.com>"]
license = "Apache-2.0"
rust-version = "1.85"
description = """
Scans binary files for zStd streams and uses Preflate-rs to decompress the stream and repack with
zStd compression. For PNG files, we use WEBP compression for RGB and RGBA to get better results. 
"""
repository = "https://github.com/microsoft/preflate-rs"
categories = ["compression"]
keywords = ["gzip", "deflate", "zlib", "zip"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
preflate-rs = { path = "../preflate" }
log = "0.4"
webp = { version = "0.3", optional = true }
crc32fast = "1.3"
zstd = "0.13.0"
lepton_jpeg = "0.3.0"

[dev-dependencies]
env_logger = "0.11"
miniz_oxide = "0.8"
adler32 = "1.2.0"

[lib]
name = "preflate_container"
crate-type = ["lib"]

[features]
webp = ["dep:webp"]
default = ["webp"]