[package]
# we have a version number on the name in order to switch the dll name if we break compatibility
# this makes sure that we can keep old versions around to decode old encodings since the format
# is complicated enough that maintaining backwards compat is hard (even minor changes in the
# predictor will break the format)
version = "0.7.2"
name = "preflate_rs_0_7"
edition = "2024"
authors = ["Kristof Roomp <kristofr@microsoft.com>"]
license = "Apache-2.0"
rust-version = "1.85"


[dependencies]
preflate-rs = { path = "../preflate" }
adaptipak = { path = "../adaptipak" }

[lib]
crate-type = ["cdylib"]
