[package]
name = "preflate-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = """
Decompresses existing DEFLATE and PNG streams to allow for better with a more state-of-the-art compression
(eg with ZStandard, Brotli) while allowing the exact original binary DEFLATE stream to be recreated
by detecting the parameters used during compression.
"""
readme = "../README.md"
categories = ["compression"]
keywords = ["gzip", "deflate", "zlib", "zip", "png"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
cabac = "0.15.0"
default-boxed = "0.2"
bitcode = "0.6.3"
deranged = "0.5"

[dev-dependencies]
env_logger = "0.11"
crc32fast = "1.3"

[lib]
name = "preflate_rs"
crate-type = ["lib"]
