[package]
name = "preflate_util"
edition = "2024"
authors = ["Kristof Roomp <kristofr@microsoft.com>"]
license = "Apache-2.0"
rust-version = "1.85"

[dependencies]
preflate-rs = { path = "../preflate" }
preflate-container = { path = "../container" }
env_logger = "0.11"
log = "0.4"
clap ={ version = "4", features = ["derive"]}
cpu-time = "1"

[[bin]]
name = "preflate_util"
